Done, to be tested:
---------------------------
* FIX: When using the black high contrast theme, in some of SuRun's windows no 
  text was visible.

ToDo:
---------------------
* on Windows Vista/7 use the elevated token istead of changing the password
* make Tray Windows for automagically started apps configurable
* Hooks must directly write to Service pipe
* on Win x64 detect x32 Executables on x64 hook (ShellExecute32->WoW->CreateProcess64)
* On ShellExec/IAT-Hook: Create Process suspended! Hooks must resume process.
* Create Inline Hook instead of IAT-Hook
* GUI for SwitchToUser
* Create a "Default" SuRunner for users that are not in "SuRunners"
* MAP network drives
* Checksums for "Always Yes" programs
* use IContextMenu2/IContextMenu to implement an Icon/Popup menu
* Console SuRun support
* LOG-File for SuRun activity

To be done in future:
---------------------
* Use Radio-Buttons for (normal/elevated) Auto-Magic
* Hide/Show all context menu entries consistently
* make all context menu entries dynamically with ShellExt 
  (E.g.: msi with popup-menu)

Deferred Whishlist:
---------------------
* icons for SuRuns context menu entries
* Intercept CreateProcessAsUser in services and check for programs started 
  with limited rights that need to be started as admin

------------------------------------------------------------------------------
SuRun Changes:
------------------------------------------------------------------------------
SuRun 1.2.0.9 Beta14 - 2010-08-04
---------------------------------
* If CreateProcessAsUser fails, SuRun's service impersonates first as Admin 
  and if that fails too, it impersonates as logged on user

SuRun 1.2.0.9 Beta13 - 2010-07-21
---------------------------------
* SuRun's service tries to impersonate the user on ERROR_INVALID_PASSWORD

SuRun 1.2.0.9 Beta12 - 2010-06-30
---------------------------------
* SuRuns Context Menu Extension add it's items only once. When righ clicking 