@@ -2,6 +2,7 @@ Done, to be tested:
 ---------------------------
 * FIX: When using the black high contrast theme, in some of SuRun's windows no 
   text was visible.
+* CHG: ScreenSnap uses CreateDIBSection istead of Get-/SetDIBits
 
 ToDo:
 ---------------------
